# Poke-berries

./: .dockerignore  .gitignore  LICENSE  README.md  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: django.yml
Postman Collection/: PokeAPI Challenge.postman_collection.json
graph/: .gitignore  README.md  graph.py  index.html  requirements.txt
pokeapi/: .dockerignore  .env.example  README.md  compose.yaml  pyproject.toml  pytest.ini
pokeapi/app/api/: views.py
pokeapi/app/helpers/: __init__.py  fetch_query.py
pokeapi/app/pokeapi/: apps.py  models.py
pokeapi/app/pokeapi/migrations/: 0001_initial.py
pokeapi/app/sync/: apps.py
pokeapi/app/sync/management/commands/: sync.py
pokeapi/compose/: Dockerfile  start.sh
pokeapi/config/: asgi.py  router.py  urls.py  wsgi.py
pokeapi/config/settings/: base.py  development.py  production.py  test.py
pokeapi/pokeapi/: settings.py  urls.py
pokeapi/tests/: test_dummy.py
